# matty

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  matrix_cli.py  matty.py  matty_tui.py  matty_tui.tcss  pyproject.toml  reorganize_tests.py  test_all_commands.sh  test_all_commands_improved.sh  test_client.py  test_new_features.sh
.github/workflows/: markdown-code-runner.yml  pytest.yml  release.yml
matty/: __init__.py  __main__.py  auth.py  cli.py  tui.py
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_async_command_execution.py  test_async_functions.py  test_auth.py  test_chat_tui.py  test_cli_commands.py  test_cli_validation.py  test_client_creation.py  test_config_loading.py  test_coverage_improvements.py  test_dataclasses.py  test_display_functions.py  test_edge_cases.py  test_error_handling.py  test_export.py  test_matrix_cli.py  test_matrix_protocol_helpers.py  test_matty.py  test_mention_parsing.py  test_message_content.py  test_message_handles.py  test_more_coverage.py  test_package_structure.py  test_pydantic_models.py  test_reactions_and_redactions.py  test_search.py  test_state_management.py  test_streaming.py  test_thread_execution.py  test_thread_handling.py  test_thread_management.py  test_thread_messages.py  test_tui.py  test_tui_snapshots.py  test_watch.py
tests/__snapshots__/test_tui_snapshots/: TestTuiSnapshots.test_initial_load.raw  TestTuiSnapshots.test_input_focused.raw  TestTuiSnapshots.test_multiline_input.raw  TestTuiSnapshots.test_narrow_terminal.raw  TestTuiSnapshots.test_no_credentials.raw  TestTuiSnapshots.test_slash_autocomplete.raw  TestTuiSnapshots.test_threads_hidden.raw  TestTuiSnapshots.test_wide_terminal.raw
