[project]
name = "matrixtui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "matrix-nio>=0.25.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "textual>=5.3.0",
    "typer>=0.16.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
